feat (Peyvandtel Users): added `index` and `store` API & tests
added index API to fetch paginated list of users that can also be filtered.
added `store` API to add a new user. the password is optional and can be generated (if null).
Debug macro method of Response.
added Test files to various situations of index and store user APIs.
added UserFactory file.
added new middleware.
Separated test environment and db.
