# app/Http/Controllers/Controller.php
@@ -51,6 +51,20 @@ namespace App\Http\Controllers;
  *          example="Unauthenticated.",
  *      ),
  *  )
+ *  @OA\Schema(
+ *      schema="Pagination",
+ *      @OA\Property(property="first_page_url", type="string"),
+ *      @OA\Property(property="last_page_url", type="string"),
+ *      @OA\Property(property="next_page_url", type="string"),
+ *      @OA\Property(property="prev_page_url", type="string"),
+ *      @OA\Property(property="path", type="string"),
+ *      @OA\Property(property="current_page", type="integer"),
+ *      @OA\Property(property="from", type="integer"),
+ *      @OA\Property(property="to", type="integer"),
+ *      @OA\Property(property="per_page", type="integer"),
+ *      @OA\Property(property="total", type="integer"),
+ *      @OA\Property(property="last_page", type="integer"),
+ *  )
  *
  */
 abstract class Controller
